# fundu

./: .bumpversion-msrv.cfg  .bumpversion.cfg  .editorconfig  .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  README.md  cspell.json  deny.toml
.bumpversion/: fundu-core.cfg  fundu-gnu.cfg  fundu-systemd.cfg  fundu.cfg  msrv.cfg
.dicts/: custom.txt
.github/workflows/: cicd.yml  publish-fundu-core.yml  publish-fundu-gnu.yml  publish-fundu-systemd.yml  publish-fundu.yml  publish.yml
benches/: benchmarks_custom.rs  benchmarks_standard.rs  custom_duration_parser_benchmark.rs  flamegraph_small_input.rs  flamegraph_standard.rs  iai_bench_custom.rs  iai_bench_parsing.rs  iai_bench_parsing_infinity.rs  iai_bench_parsing_negative.rs  iai_bench_parsing_time_units.rs  iai_bench_reference.rs  iai_bench_standard.rs  iai_bench_time_unit_parsing.rs  iai_parse_duration_benchmark.rs  parse_duration_benchmark.rs
examples/: chrono.rs  clap_builder.rs  clap_derive.rs  convert.rs  custom.rs  simple.rs  systemd.rs
fundu/: .bumpversion.cfg  Cargo.toml
fundu-core/: Cargo.toml  README.md
fundu-core/src/: config.rs  error.rs  lib.rs  parse.rs  time.rs  util.rs
fundu-core/tests/: test_parsing_numerals.rs
fundu-gnu/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
fundu-gnu/benches/: benchmarks.rs  flamegraph.rs  fundu_gnu_iai_parsing.rs  fundu_gnu_iai_parsing_time_units.rs  iai_bench_parsing.rs
fundu-gnu/examples/: chrono.rs
fundu-gnu/fuzz/: Cargo.toml
fundu-gnu/fuzz/dicts/: parsing.dict
fundu-gnu/fuzz/fuzz_targets/: parsing.rs
fundu-gnu/src/: datetime.rs  lib.rs  util.rs
fundu-gnu/tests/: test_relative_time_parser.rs
fundu-systemd/: Cargo.toml  README.md
fundu-systemd/benches/: benchmarks.rs  flamegraph.rs  fundu_systemd_iai_parsing.rs  fundu_systemd_iai_parsing_time_units.rs  iai_bench_parsing.rs  iai_bench_parsing_time_units.rs
fundu-systemd/src/: lib.rs
fundu-systemd/tests/: test_time_span_parser.rs
fundu/benches/: benchmarks_custom.rs  benchmarks_standard.rs  flamegraph_custom.rs  flamegraph_standard.rs  fundu_iai_custom.rs  fundu_iai_parsing.rs  fundu_iai_parsing_time_units.rs  iai_bench_parsing_infinity.rs  iai_bench_reference.rs
fundu/examples/: clap_builder.rs  clap_derive.rs  convert.rs  custom.rs  gnu.rs  systemd.rs
fundu/fuzz/: .gitignore  Cargo.toml
fundu/fuzz/fuzz_targets/: parse_single.rs
fundu/src/: config.rs  error.rs  lib.rs  parse.rs  time.rs  util.rs
fundu/src/custom/: builder.rs  mod.rs  parser.rs  time_units.rs
fundu/src/standard/: builder.rs  parser.rs  time_units.rs
fundu/tests/: parser_test.rs
fuzz/: Cargo.toml
fuzz/dicts/: parse_single.dict
fuzz/fuzz_targets/: f64_like_input.rs  parse_single.rs
src/: config.rs  error.rs  lib.rs  parse.rs  time.rs  util.rs
src/builder/: config.rs  custom.rs  mod.rs  standard.rs
src/custom/: builder.rs  mod.rs  parser.rs  time_units.rs
src/parsing/: mod.rs  parser.rs  repr.rs  repr_parser.rs
src/standard/: builder.rs  mod.rs  parser.rs  time_units.rs
tests/: parser_test.rs
