[workspace]
resolver = "2"
members = ["fundu", "fundu-core", "fundu-gnu", "fundu-systemd"]

[workspace.dependencies]
chrono = { version = "0.4.24", default-features = false }
clap = "4.3.0"
criterion = "0.5.1"
iai-callgrind = { version = "0.5.0" }
inferno = "0.11.15"
pprof = "0.13.0"
rstest = "0.18.1"
rstest_reuse = "0.6.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_test = "1.0.162"
time = { version = "<= 0.3.20", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.flamegraph]
inherits = "bench"
opt-level = 1
debug = true
