[workspace]
resolver = "2"
members = ["fundu", "fundu-core", "fundu-gnu", "fundu-systemd"]

[workspace.dependencies]
chrono = { version = "0.4.24", default-features = false }
clap = "4"
criterion = "0.5"
iai-callgrind = "0.10"
inferno = "0.11.19"
pprof = "0.13"
rstest = "0.18"
rstest_reuse = "0.6"
serde = { version = "1", features = ["derive"] }
serde_test = "1"
time = { version = "0.3.1", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1

[profile.flamegraph]
inherits = "bench"
opt-level = 1
debug = true
