[package]
name = "fundu-core"
version = "0.1.0"
edition = "2021"
authors = ["Joining7943 <joining@posteo.de>"]
description = "The core driving the implementation of fundu"
readme = "README.md"
license = "MIT"
keywords = ["fundu", "fundu-core", "parse", "duration", "time"]
categories = ["parsing", "date-and-time"]
homepage = "https://github.com/Joining7943/fundu"
repository = "https://github.com/Joining7943/fundu"
rust-version = "1.64.0"

[features]
default = []
chrono = ["dep:chrono"]
serde = ["dep:serde"]
time = ["dep:time"]

[dependencies]
chrono = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features=["derive"]}
time = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
