[package]
name = "fundu-gnu"
version = "0.1.0"
edition = "2021"
authors = ["Joining7943 <joining@posteo.de>"]
description = "Fast and precise gnu relative time parser of rust strings to a Duration"
readme = "README.md"
license = "MIT"
keywords = ["fundu", "gnu", "parse", "duration", "time"]
categories = ["parsing", "date-and-time"]
homepage = "https://github.com/Joining7943/fundu"
repository = "https://github.com/Joining7943/fundu"
rust-version = "1.64.0"

[features]
default = []
chrono = ["fundu-core/chrono"]
serde = ["fundu-core/serde"]
time = ["fundu-core/time"]
with-iai = []
with-flamegraph = []

[dependencies]
fundu-core = { path = "../fundu-core", version = "=0.1.0" }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
clap = { workspace = true, features = ["cargo"]}
chrono = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
iai-callgrind = { workspace = true }
inferno = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "flamegraph"
harness = false
bench = false
required-features = ["with-flamegraph"]

[[bench]]
name = "iai_bench_parsing"
harness = false
required-features = ["with-iai"]

[[example]]
name = "chrono"
test = false
required-features = ["chrono"]
