[package]
name = "fundu-gnu"
version = "0.2.0"
edition = "2021"
authors = ["Joining7943 <joining@posteo.de>"]
description = "Fast and precise gnu relative time parser of rust strings to a Duration"
readme = "README.md"
license = "MIT"
keywords = ["fundu", "gnu", "parse", "duration", "time"]
categories = ["parsing", "date-and-time"]
homepage = "https://github.com/fundu-rs/fundu"
repository = "https://github.com/fundu-rs/fundu"
rust-version = "1.64.0"

[features]
default = []
chrono = ["fundu-core/chrono", "dep:chrono"]
serde = ["fundu-core/serde", "dep:serde"]
time = ["fundu-core/time", "dep:time"]
with-iai = []
with-flamegraph = []

[dependencies]
fundu-core = { path = "../fundu-core", version = "=0.2.0" }
chrono = { workspace = true, optional = true  }
serde = { workspace = true, optional = true, features = ["derive"] }
time = { workspace = true, optional = true, features = ["large-dates"] }

[dev-dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo"]}
criterion = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_test = { workspace = true }
time = { workspace = true, features = ["macros", "large-dates"]}

[target.'cfg(unix)'.dev-dependencies]
iai-callgrind = { workspace = true }
inferno = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "flamegraph"
harness = false
bench = false
required-features = ["with-flamegraph"]

[[bench]]
name = "fundu_gnu_iai_parsing"
harness = false
required-features = ["with-iai"]

[[bench]]
name = "fundu_gnu_iai_parsing_time_units"
harness = false
required-features = ["with-iai"]

[[example]]
name = "chrono"
test = false
required-features = ["chrono"]
