[package]
name = "fundu-systemd"
version = "0.3.1"
edition = "2021"
authors = ["Joining7943 <joining@posteo.de>"]
description = "Fast and precise systemd time span parser of rust strings to a Duration"
readme = "README.md"
license = "MIT"
keywords = ["fundu", "systemd", "parse", "duration", "time"]
categories = ["parsing", "date-and-time"]
homepage = "https://github.com/fundu-rs/fundu"
repository = "https://github.com/fundu-rs/fundu"
rust-version = "1.66.0"

[features]
default = []
chrono = ["fundu/chrono"]
serde = ["fundu/serde"]
time = ["fundu/time"]
with-flamegraph = ["fundu/with-flamegraph"]
with-iai = ["fundu/with-iai"]

[dependencies]
fundu = { path = "../fundu", version = "=2.0.1", default-features = false, features = [
  "base",
] }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
iai-callgrind = { workspace = true }
inferno = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "fundu_systemd_iai_parsing"
harness = false
required-features = ["with-iai"]

[[bench]]
name = "flamegraph"
harness = false
bench = false
required-features = ["with-flamegraph"]
