[package]
name = "fundu"
version = "1.0.0"
edition = "2021"
authors = ["Joining7943 <joining@posteo.de>"]
description = "Configurable, precise and fast rust string parser to a Duration"
readme = "../README.md"
license = "MIT"
keywords = ["fundu", "parse", "string", "duration", "time"]
categories = ["parsing", "date-and-time"]
homepage = "https://github.com/Joining7943/fundu"
repository = "https://github.com/Joining7943/fundu"
rust-version = "1.64.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[features]
default = ["standard"]
standard = []
custom = []
base = []
chrono = ["fundu-core/chrono"]
serde = ["fundu-core/serde", "dep:serde"]
time = ["fundu-core/time"]
with-iai = []
with-flamegraph = []

[dependencies]
fundu-core = { path = "../fundu-core", version = "=0.1.0" }
serde = { workspace = true, optional = true, features=["derive"]} # XXX still needed?

[dev-dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"] }
criterion = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_test  = { workspace = true }
time = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
iai-callgrind = { workspace = true }
inferno = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[[bench]]
name = "benchmarks_custom"
harness = false
required-features = ["custom"]

[[bench]]
name = "benchmarks_standard"
harness = false
required-features = ["standard"]

[[bench]]
name = "iai_bench_parsing_time_units"
harness = false
required-features = ["standard", "with-iai"]

[[bench]]
name = "iai_bench_parsing"
harness = false
required-features = ["standard", "with-iai"]

[[bench]]
name = "iai_bench_parsing_negative"
harness = false
required-features = ["standard", "with-iai"]

[[bench]]
name = "iai_bench_parsing_infinity"
harness = false
required-features = ["standard", "with-iai"]

[[bench]]
name = "iai_bench_reference"
harness = false
required-features = ["with-iai"]

[[bench]]
name = "iai_bench_standard"
harness = false
required-features = ["standard", "with-iai"]

[[bench]]
name = "iai_bench_custom"
harness = false
required-features = ["custom", "with-iai"]

[[bench]]
name = "flamegraph_standard"
harness = false
bench = false
required-features = ["standard", "with-flamegraph"]

[[bench]]
name = "flamegraph_custom"
harness = false
bench = false
required-features = ["custom", "with-flamegraph"]

[[example]]
name = "simple"
test = false

[[example]]
name = "clap_derive"
test = false

[[example]]
name = "clap_builder"
test = false

[[example]]
name = "convert"
test = false
required-features = ["chrono", "time"]

[[example]]
name = "custom"
test = false
required-features = ["custom"]

[[example]]
name = "systemd"
test = false
required-features = ["custom"]

[[example]]
name = "gnu"
test = false
required-features = ["custom"]
