[package]
name = "fundu"
version = "2.0.1"
edition = "2021"
authors = ["Joining7943 <joining@posteo.de>"]
description = "Configurable, precise and fast rust string parser to a Duration"
readme = "../README.md"
license = "MIT"
keywords = ["fundu", "parse", "string", "duration", "time"]
categories = ["parsing", "date-and-time"]
homepage = "https://github.com/fundu-rs/fundu"
repository = "https://github.com/fundu-rs/fundu"
rust-version = "1.66.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[features]
default = ["standard"]
standard = []
custom = []
base = []
chrono = ["fundu-core/chrono"]
serde = ["fundu-core/serde", "dep:serde"]
time = ["fundu-core/time"]
with-iai = []
with-flamegraph = []

[dependencies]
fundu-core = { path = "../fundu-core", version = "=0.3.1" }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"] }
criterion = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_test = { workspace = true }
time = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
iai-callgrind = { workspace = true }
inferno = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[[bench]]
name = "benchmarks_custom"
harness = false
required-features = ["custom"]

[[bench]]
name = "benchmarks_standard"
harness = false
required-features = ["standard"]

[[bench]]
name = "fundu_iai_parsing"
harness = false
required-features = ["standard", "with-iai"]

[[bench]]
name = "fundu_iai_custom"
harness = false
required-features = ["custom", "with-iai"]

[[bench]]
name = "flamegraph_standard"
harness = false
bench = false
required-features = ["standard", "with-flamegraph"]

[[bench]]
name = "flamegraph_custom"
harness = false
bench = false
required-features = ["custom", "with-flamegraph"]

[[example]]
name = "simple"
test = false

[[example]]
name = "clap_derive"
test = false

[[example]]
name = "clap_builder"
test = false

[[example]]
name = "convert"
test = false
required-features = ["chrono", "time"]

[[example]]
name = "custom"
test = false
required-features = ["custom"]

[[example]]
name = "systemd"
test = false
required-features = ["custom"]

[[example]]
name = "gnu"
test = false
required-features = ["custom"]
