[package]
name = "fundu-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
regex = "1.8"

[dependencies.fundu]
path = ".."
features = ["custom"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "f64_like_input"
path = "fuzz_targets/f64_like_input.rs"
test = false
doc = false

[[bin]]
name = "parse_single"
path = "fuzz_targets/parse_single.rs"
test = false
doc = false
